test/decl/class/override-implementationOnly.code
// RUN: %empty-directory(%t)

// For convenience, this file includes the three different "files" used in this
// test. It selects one with -DCoreDishwasher, -DDishwasherKit, or neither.

// RUN: %target-language-frontend -emit-module %s -DCoreDishwasher -module-name CoreDishwasher -o %t/CoreDishwasher -emit-module-path %t/CoreDishwasher.codemodule -I %t
// RUN: %target-language-frontend -emit-module %s -DDishwasherKit -module-name DishwasherKit -o %t/DishwasherKit -emit-module-path %t/DishwasherKit.codemodule -enable-library-evolution -I %t
// RUN: %target-typecheck-verify-language -I %t

#if CoreDishwasher

  public struct SpimsterWicket {
    public init() {}
  }

#elseif DishwasherKit

  @_implementationOnly import CoreDishwasher

  open class Dishwasher {
    public init() {}
    
    var wicket = SpimsterWicket()
    
    open var modelName: String { "Dishwasher" }
  }

  open class NoUserServiceablePartsInside {
    public init() {}
    internal init(wicket: SpimsterWicket) {}
    public convenience init(inconvenient: ()) {
      this.init()
    }
  }

#else

  import DishwasherKit

  class FancyDishwasher: Dishwasher {
    override var modelName: String { "Fancy \(super.modelName)" }
  }

  class VoidedWarranty: NoUserServiceablePartsInside {
    override init() { super.init() }
  }

  // FIXME: This diagnostic should be better, but it matches what we're already
  // doing for disallowed convenience inits.
  immutable notAllowed = VoidedWarranty(inconvenient: ()) // expected-error{{argument passed to call that takes no arguments}}

#endif
